# model-parallelism-tutorial

./: .gitignore  README.md  README_zh.md  pyproject.toml
mp_tutorial/: __init__.py  diffusion.py  diffusion_viz.py  distributed.py  fonts.py  formatting.py  inference.py  inference_viz.py  plantuml.py  viz.py
notebooks/00-gpu-communication/: 01-gpu-communication.en.ipynb  01-gpu-communication.lzh.ipynb  01-gpu-communication.zh.ipynb  README.md
notebooks/01-data-parallelism/: 01-data-parallelism.en.ipynb  01-data-parallelism.lzh.ipynb  01-data-parallelism.zh.ipynb  README.md
notebooks/02-tensor-parallelism/: 01-tensor-parallelism.en.ipynb  01-tensor-parallelism.lzh.ipynb  01-tensor-parallelism.zh.ipynb  README.md
notebooks/03-pipeline-parallelism/: 03-pipeline-parallelism-classical.ipynb  03-pipeline-parallelism-en.ipynb  03-pipeline-parallelism-zh.ipynb  README.md
notebooks/04-sequence-parallelism/: 01-sequence-parallelism.en.ipynb  01-sequence-parallelism.lzh.ipynb  01-sequence-parallelism.zh.ipynb  README.md
notebooks/05-context-parallelism/: 01-context-parallelism.en.ipynb  01-context-parallelism.lzh.ipynb  01-context-parallelism.zh.ipynb  README.md
notebooks/06-expert-parallelism/: README.md  ep.en.ipynb  (+2 more)
scripts/: gen_rl_00_foundations.py  gen_rl_00_lzh.py  gen_rl_00_zh.py  gen_rl_01_lzh.py  gen_rl_01_ppo.py  gen_rl_01_zh.py  gen_rl_02_dpo.py  gen_rl_02_lzh.py  gen_rl_02_zh.py  gen_rl_03_grpo.py  gen_rl_03_lzh.py  gen_rl_03_zh.py  gen_rl_04_frontiers.py  gen_rl_04_lzh.py  gen_rl_04_zh.py  gen_rl_notebook.py  gen_rl_notebook_lzh.py  gen_rl_notebook_zh.py
(+145 files in other folders)
