[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mp-tutorial"
version = "0.1.0"
description = "Interactive notebook-based teaching package for model parallelism and distributed training techniques"
requires-python = ">=3.9"
dependencies = [
    "jupyter",
    "torch",
    "matplotlib",
    "numpy",
    "graphviz",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[tool.setuptools.packages.find]
include = ["mp_tutorial*"]
